<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/grad_style">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">


        <TextView
            android:id="@+id/emerge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emerge"
            android:textColor="#D3D3D3"
            android:fontFamily="sans-serif"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/computing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compute"
            android:textColor="#D3D3D3"
            android:fontFamily="sans-serif"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_below="@+id/emerge"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/arena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arena"
            android:textColor="#D3D3D3"
            android:fontFamily="sans-serif"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_below="@+id/computing"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/splash_logo"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/arena"
            android:layout_marginTop="100dp"
            android:visibility="gone"/>


    </RelativeLayout>


</RelativeLayout>