<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:background="@drawable/grad_style">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/rel_btns">

        <ImageView
            android:id="@+id/login_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher_round"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="30sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/login_icon"
            android:layout_marginTop="30dp"/>
        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_login"
            android:layout_marginTop="20dp">

        <LinearLayout
            android:id="@+id/linear_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/name"
                android:fontFamily="sans-serif-medium"
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <EditText
                android:id="@+id/name_signup"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/edit_style"
                android:inputType="textPersonName"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:fontFamily="sans-serif-medium"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/year"
                android:fontFamily="sans-serif-medium"
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <EditText
                android:id="@+id/year_signup"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/edit_style"
                android:inputType="number"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:fontFamily="sans-serif-medium"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/sec"
                android:fontFamily="sans-serif-medium"
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <EditText
                android:id="@+id/section_signup"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/edit_style"
                android:inputType="text"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:fontFamily="sans-serif-medium"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/Phone"
                android:fontFamily="sans-serif-medium"
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <EditText
                android:id="@+id/phone_signup"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/edit_style"
                android:inputType="phone"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:fontFamily="sans-serif-medium"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:fontFamily="sans-serif-medium"
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"/>

            <EditText
                android:id="@+id/email_signup"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/edit_style"
                android:inputType="textEmailAddress"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:fontFamily="sans-serif-medium"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/password"
                android:fontFamily="sans-serif-medium"
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <EditText
                android:id="@+id/password_signup"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/edit_style"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:fontFamily="sans-serif-medium"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <Button
                android:id="@+id/signup_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/btn_style"
                android:text="@string/register"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>
        </ScrollView>




    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <Button
            android:id="@+id/login_button_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_style2"
            android:text="@string/Login"
            android:layout_alignParentStart="true"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"/>

        <Button
            android:id="@+id/resetButton_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_style2"
            android:text="@string/forgotpass"
            android:layout_alignParentEnd="true"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"/>

    </RelativeLayout>

</RelativeLayout>